fix custom title on mobile

--- a/sass/pages/_custom.scss
+++ b/sass/pages/_custom.scss
@@ -10,7 +10,7 @@
     text-shadow: $shadow1;
     font-family: $fontLogo;
     font-size: 3.5rem;
-    right: 24%;
+    width: 400px;
     position: relative;
   }
   &__points-container{
